<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_logo" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:elevation="5dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="#ebca0707"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <ImageView
                android:id="@+id/add_friend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@+id/drop_down_option_menu"
                android:src="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_name"
                android:layout_alignTop="@+id/user"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:textColor="@color/white" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse_btn"
                android:id="@+id/browse_button"
                android:background="@null"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit your Profile"
                android:id="@+id/edit_profile_btn"
                android:background="@null"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_books_btn"
                android:id="@+id/add_books_you_own"
                android:background="@null"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/borrowed_btn"
                android:background="@null"
                android:id="@+id/borrowed_btn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="List users"
                android:id="@+id/btn_users"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Image Upload"
                android:id="@+id/img_upload"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="View Books"
                android:id="@+id/view_books_btn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:id="@+id/sign_out"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</ScrollView>